# are-we-really-load-generating

./: .gitattributes  .gitignore  goGenerator.go  largepacket.lua
arrival-time-server/: README.md  dummyServer.py  http2Server.py  latencyHistogram.py  script.sh  timestamp.txt
data-wrk2/t1-c20-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t1-c25-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t1-c50-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t10-c10-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t10-c20-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t10-c25-rps100/: client_tcpdump.csv  server-cpu-util.csv  server_arrival_times.csv  wrk2-cpu-util.csv  wrk2_results.csv
data-wrk2/t12-c20-rps100/: client_tcpdump.csv  (+4 more)
experiments/: .gitignore  data2csv.py  machines  multimachine_scaling.py  scaling.py  sp24-cs525-0301.cs.illinois.edu-t1-c1.csv  ssh-to-vm.sh  visualize.py  wrk_scaling.py  wrk_scaling_hotelreservation.py
load-gen-rust/: .gitignore  Cargo.toml  README.md  analysis.py
load-gen-rust/src/: main.rs
mock-server/: .gitignore  Cargo.toml  README.md
new-experiments/: install_nghttp2.sh  install_wrk2.sh  install_wrk2_dsb.sh  social_network_mixed.js
trace-parser/: main.go
(+4363 files in other folders)
