[package]
name = "load-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23" }
clap = { version = "4.4.18", features = ["derive"] }

